added some utility classes to validate dates and strings